<resources>
    <string name="app_name">Perfeggt</string>

    <string name="weight_header">Weight:</string>

    <string name="temperature_header">Temperature</string>
    <string name="temperature_entry_room">Room (21°C)</string>
    <string name="temperature_entry_fridge">Fridge (4°C)</string>
    <string name="temperature_entry_custom">Custom (°C):</string>

    <string name="consistency_header">Preferred Consistency</string>
    <string name="consistency_soft">Soft</string>
    <string name="consistency_medium">Medium</string>
    <string name="consistency_hard">Rather hard</string>

    <string name="height_header">Height above sea level:</string>

    <string name="calculate">Calculate</string>

    <string name="unit_gram">g.</string>
    <string name="unit_meter">m.</string>

    <string name="completed_header">Done!</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="start_timer">Go!</string>

    <string name="notification_ticker_text">Timer started!</string>
    <string name="notification_content">Alarm set to:</string>

    <string name="cancel_confirmation_dialog_title">Cancel alarm?</string>
    <string name="cancel_confirmation_dialog_text">Do you want to cancel the countdown?</string>

    <string name="confirm_yes">Yes</string>
    <string name="confirm_no">No</string>

    <string name="err_invalid_input">Invalid input!</string>
</resources>
