<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.jurtz.android.pefectegg.SettingsActivity"
    android:background="@color/mainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LayoutWeight">
                <TextView
                    android:id="@+id/lblWeightInfo"
                    android:layout_weight="3"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:text="@string/weight_header" />
                <TextView
                    android:id="@+id/lblWeightUnit"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:text="@string/unit_gram" />
                <EditText
                    android:id="@+id/txtWeight"
                    android:layout_toEndOf="@id/lblWeightInfo"
                    android:layout_toStartOf="@id/lblWeightUnit"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:textAlignment="center"
                    android:hint="60"
                    android:textColorHint="@color/hintColor"
                    android:maxLines="1"
                    android:maxLength="3"/>
            </RelativeLayout>


            <TextView
                android:id="@+id/lblTemperature"
                android:text="@string/temperature_header"
                style="@style/yellowHeaderText"
                android:layout_below="@+id/linearLayoutWeight"
                android:layout_alignParentStart="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/linearLayoutTemperatureStart"
                android:layout_below="@id/lblTemperature"
                android:background="@drawable/border">

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/lblTemperature"
                    android:layout_alignParentEnd="true"
                    android:id="@+id/rgTemperature">
                    <RadioButton
                        android:id="@+id/rbTemperatureRoom"
                        android:text="@string/temperature_entry_room"
                        style="@style/yellowRadioButton" />
                    <RadioButton
                        android:id="@+id/rbTemperatureFridge"
                        android:text="@string/temperature_entry_fridge"
                        style="@style/yellowRadioButton"
                        android:checked="true" />
                    <RadioButton
                        android:id="@+id/rbTemperatureOther"
                        android:text="@string/temperature_entry_custom"
                        style="@style/yellowRadioButton" />
                </RadioGroup>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayoutTemperatureStart"
                    android:id="@+id/txtTemperature"
                    android:textAlignment="center"
                    android:hint="15"
                    android:layout_gravity="bottom"
                    android:textColor="@color/mainForeground"
                    android:textSize="@dimen/fontsize_regular"
                    android:textColorHint="@color/hintColor"
                    android:maxLength="2"
                    android:inputType="number"/>
            </LinearLayout>

            <TextView
                android:id="@+id/lblConsistency"
                android:text="@string/consistency_header"
                style="@style/yellowHeaderText"
                android:layout_below="@+id/linearLayoutTemperatureStart"
                android:layout_alignParentStart="true" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/lblConsistency"
                android:layout_alignParentEnd="true"
                android:id="@+id/rgConsistency"
                android:background="@drawable/border">
                <RadioButton
                    android:id="@+id/rbConsistencySoft"
                    android:text="@string/consistency_soft"
                    style="@style/yellowRadioButton" />
                <RadioButton
                    android:id="@+id/rbConsistencyMedium"
                    android:text="@string/consistency_medium"
                    android:checked="true"
                    style="@style/yellowRadioButton" />
                <RadioButton
                    android:id="@+id/rbConsistencyHard"
                    android:text="@string/consistency_hard"
                    style="@style/yellowRadioButton" />
            </RadioGroup>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/LayoutHeight"
                android:paddingTop="15dp">
                <TextView
                    android:id="@+id/lblHeightInfo"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:text="@string/height_header" />

                <TextView
                    android:id="@+id/lblHeightUnit"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:text="@string/unit_meter" />

                <EditText
                    android:id="@+id/txtHeight"
                    android:layout_toEndOf="@id/lblHeightInfo"
                    android:layout_toStartOf="@id/lblHeightUnit"
                    android:layout_centerVertical="true"
                    style="@style/yellowHeaderText"
                    android:textAlignment="center"
                    android:textColorHint="@color/hintColor"
                    android:hint="300" />
            </RelativeLayout>

            <Button
                android:id="@+id/cmdCalculateTime"
                android:text="@string/calculate"
                style="@style/yellowButton"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
